feat: GET exercises endpoint
