# docs/swagger.json
@@ -346,6 +346,59 @@
             }
         },
         "/tietoevry/exercises": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get all exercises (HR_Zones, Samples, Sections) for a specific user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tietoevry - Exercise"
+                ],
+                "summary": "Get exercises by user ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID (UUID)",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.TietoevryExerciseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.ValidationErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.ForbiddenResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.InternalServerErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -5180,6 +5233,14 @@
                     "items": {
                         "$ref": "#/definitions/swagger.TietoevryDeletedUser"
                     }
+                }
+            }
+        },
+        "swagger.TietoevryExerciseResponse": {
+            "type": "object",
+            "properties": {
+                "exercises": {
+                    "$ref": "#/definitions/swagger.TietoevryExerciseUpsertInput"
                 }
             }
         },
